<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Menu"
    android:background="@color/background" >

    <Button
        android:id="@+id/alarms"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/groups"
        android:layout_below="@+id/groups"
        android:layout_marginTop="50dp"
        android:text="@string/alarms"
        android:background="@layout/buttons" />

    <Button
        android:id="@+id/logout"
        android:layout_width="115dp"
        android:layout_height="65dp"
        android:layout_alignLeft="@+id/alarms"
        android:layout_below="@+id/alarms"
        android:layout_marginTop="50dp"
        android:text="@string/logout"
        android:background="@layout/buttons" />

    <Button
        android:id="@+id/groups"
        android:layout_width="115dp"
        android:layout_height="65dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/groups"
        android:background="@layout/buttons" />

</RelativeLayout>