<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@color/background" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="108dp"
        android:text="@string/username" />

    <EditText
        android:id="@+id/entered_user"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_toRightOf="@+id/textView1"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/entered_password"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/entered_user"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="38dp"
        android:layout_toLeftOf="@+id/entered_password"
        android:text="@string/password" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="115dp"
        android:layout_height="65dp"
        android:layout_below="@+id/entered_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:background="@layout/buttons"
        android:text="@string/login" />

</RelativeLayout>